(-) button navigasi daftar pelanggaran dan token

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="#627986"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,16 +11,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
+        <ImageView
+
             android:id="@+id/tLogin"
-            android:text="LOGIN"
-            android:textSize="28dp"
+            android:layout_width="259dp"
+            android:layout_height="183dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"
+            android:src="@drawable/logo"
+            android:text="LOGIN"
+            android:textSize="28dp" />
 
 
         <EditText
@@ -29,7 +33,9 @@
             android:layout_below="@id/tLogin"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"/>
+            android:layout_marginRight="20dp"
+            android:textColor="#F5EEEE"
+            android:textColorHint="#FFFFFF"/>
 
 
         <EditText
@@ -40,29 +46,59 @@
             android:layout_below="@id/login_username"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"/>
+            android:layout_marginRight="20dp"
+            android:inputType="textPassword"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF" />
+
+
+        <CheckBox
+            android:id="@+id/rememberMe"
+            android:layout_width="379dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="12dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginBottom="342dp"
+            android:shadowColor="#FFFFFF"
+            android:text="RememberMe"
+            android:textColor="#F2FFFFFF"
+            android:textColorHint="#E9FFFFFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
+            android:id="@+id/bLogin"
             android:layout_width="100dp"
             android:layout_height="50dp"
-            android:id="@+id/bLogin"
+            android:layout_below="@id/login_password"
+            android:layout_marginLeft="90dp"
+            android:layout_marginTop="72dp"
+            android:layout_marginRight="20dp"
+            android:background="@android:color/holo_orange_light"
             android:hint="Login"
             android:onClick="bLogin"
-            android:layout_below="@id/login_password"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="90dp"
-            android:layout_marginRight="20dp" />
+            android:text="Login"
+            android:textSize="15sp" />
 
         <Button
+            android:id="@+id/bSignup"
             android:layout_width="100dp"
             android:layout_height="50dp"
-            android:id="@+id/bSignup"
+            android:layout_below="@id/login_password"
+            android:layout_marginLeft="220dp"
+            android:layout_marginTop="72dp"
+            android:layout_marginRight="20dp"
+            android:background="@android:color/holo_orange_light"
             android:hint="Sign Up"
             android:onClick="bSignup"
-            android:layout_below="@id/login_password"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft= "220dp"
-            android:layout_marginRight="20dp" />
+            android:text="Sign Up"
+            android:textColor="#000000"
+            android:textSize="15sp" />
 
 
     </RelativeLayout>
