--- a/app/src/main/res/layout/card_daftar.xml
+++ b/app/src/main/res/layout/card_daftar.xml
@@ -12,6 +12,13 @@
         android:textSize="14sp"/>
 
     <TextView
+        android:id="@+id/no_sim"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="14sp"/>
+
+    <TextView
         android:id="@+id/plat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
